api response refactor
